// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Answers should render a component for each answer type: Checkbox 1`] = `
<Answers__AnswerWrapper>
  <MultipleChoiceAnswer
    answer={
      Object {
        "options": Array [],
        "type": "Checkbox",
      }
    }
  />
</Answers__AnswerWrapper>
`;

exports[`Answers should render a component for each answer type: Currency 1`] = `
<Answers__AnswerWrapper>
  <CurrencyAnswer
    answer={
      Object {
        "options": Array [],
        "type": "Currency",
      }
    }
  />
</Answers__AnswerWrapper>
`;

exports[`Answers should render a component for each answer type: Number 1`] = `
<Answers__AnswerWrapper>
  <TextAnswer
    answer={
      Object {
        "options": Array [],
        "type": "Number",
      }
    }
  />
</Answers__AnswerWrapper>
`;

exports[`Answers should render a component for each answer type: Percentage 1`] = `
<Answers__AnswerWrapper>
  <PercentageAnswer
    answer={
      Object {
        "options": Array [],
        "type": "Percentage",
      }
    }
  />
</Answers__AnswerWrapper>
`;

exports[`Answers should render a component for each answer type: Radio 1`] = `
<Answers__AnswerWrapper>
  <MultipleChoiceAnswer
    answer={
      Object {
        "options": Array [],
        "type": "Radio",
      }
    }
  />
</Answers__AnswerWrapper>
`;

exports[`Answers should render a component for each answer type: TextArea 1`] = `
<Answers__AnswerWrapper>
  <TextAreaAnswer
    answer={
      Object {
        "options": Array [],
        "type": "TextArea",
      }
    }
  />
</Answers__AnswerWrapper>
`;

exports[`Answers should render a component for each answer type: TextField 1`] = `
<Answers__AnswerWrapper>
  <TextAnswer
    answer={
      Object {
        "options": Array [],
        "type": "TextField",
      }
    }
  />
</Answers__AnswerWrapper>
`;

exports[`Answers should render date answers 1`] = `
<Answers__AnswerWrapper>
  <DateAnswer
    answer={
      Object {
        "properties": Object {
          "format": "dd/mm/yyyy",
        },
        "type": "Date",
      }
    }
  />
</Answers__AnswerWrapper>
`;

exports[`Answers should render date range answers 1`] = `
<Answers__AnswerWrapper>
  <DateRangeAnswer
    answer={
      Object {
        "properties": Object {},
        "type": "DateRange",
      }
    }
  />
</Answers__AnswerWrapper>
`;
